--- a/ns-webApp/src/main/webapp/WEB-INF/web.xml
+++ b/ns-webApp/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,29 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  
+<!--   <listener> -->
+<!--         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> -->
+<!--     </listener> -->
+  
+  <servlet>
+      <servlet-name>SpringServlet</servlet-name>
+      <servlet-class>
+         org.springframework.web.servlet.DispatcherServlet
+      </servlet-class>
+      <init-param>
+     <param-name>contextConfigLocation</param-name>
+     <param-value>/WEB-INF/springServlet.xml</param-value>
+   	</init-param>
+      <load-on-startup>1</load-on-startup>
+   </servlet>
+   
+   <servlet-mapping>
+      <servlet-name>SpringServlet</servlet-name>
+      <url-pattern>/ns-webApp/*</url-pattern>
+   </servlet-mapping>
+   
+   
 </web-app>
 
 
