--- a/ns-webApp/pom.xml
+++ b/ns-webApp/pom.xml
@@ -67,11 +67,18 @@
         <groupId>org.eclipse.jetty</groupId>
 		<artifactId>jetty-maven-plugin</artifactId>
         <version>${jettyVersion}</version>
+        <configuration>
+	        <webApp>
+			    <contextPath>/ns-webApp</contextPath>
+			</webApp>
+		</configuration>
+		
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
+        
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
